--- a/src/app.css
+++ b/src/app.css
@@ -1,1 +1,6 @@
 @import "tailwindcss";
+
+@theme {
+  --font-sans: "Google Sans Flex", sans-serif;
+  --font-mono: "Google Sans Code", monospace;
+}
